--- a/stockists.html
+++ b/stockists.html
@@ -172,7 +172,8 @@
   
   <script>
     var map = L.map('tabrificsMap').setView([56.4907, -4.2026], 6);
-    L.tileLayer('https://api.maptiler.com/maps/streets-v2/{z}/{x}/{y}.png?key=', {
+    var maptilerAPIkey = "YOURKEYHERE"
+    L.tileLayer(`https://api.maptiler.com/maps/streets-v2/{z}/{x}/{y}.png?key=${maptilerAPIkey}`, {
         maxZoom: 19,
         attribution: "\u003ca href=\"https://www.maptiler.com/copyright/\" target=\"_blank\"\u003e\u0026copy; MapTiler\u003c/a\u003e \u003ca href=\"https://www.openstreetmap.org/copyright\" target=\"_blank\"\u003e\u0026copy; OpenStreetMap contributors\u003c/a\u003e",
         crossOrigin: true
