--- a/stockists.html
+++ b/stockists.html
@@ -229,7 +229,7 @@
     }
   
     var stockists = []; // Initialize the stockists array
-    var publicSpreadsheetUrl = ""
+    var publicSpreadsheetUrl = "YOURURLHERE"
     
     function init() {
       Papa.parse(publicSpreadsheetUrl, {
