--- a/stockists.html
+++ b/stockists.html
@@ -202,6 +202,7 @@
           .on('add', function() {
             if (this._icon) this._icon.classList.add("huechange");
           });
+        stockist.marker = marker;
         markers.addLayer(marker);
       });
       map.addLayer(markers);
@@ -214,10 +215,17 @@
       var bounds = map.getBounds();
       var visibleStockists = stockists.filter(stockist => bounds.contains(L.latLng(stockist.lat, stockist.lng)));
   
-      visibleStockists.forEach(function(stockist) {
+      visibleStockists.forEach(function(stockist,index) {
         var element = document.createElement('div');
         element.innerHTML = `<strong>${stockist.name}</strong><p>${stockist.address}</p>`;
         element.classList.add("stockist-element");
+      
+        element.addEventListener('click',function(){
+          if (stockist.marker) {
+            map.setView(stockist.marker.getLatLng(),14);
+            stockist.marker.openPopup();
+          }
+        })
         stockistListElement.appendChild(element);
         var divider = document.createElement('hr');
         stockistListElement.appendChild(divider);
