added url and key placeholders

--- a/example.html
+++ b/example.html
@@ -236,8 +236,7 @@
   
     var stockists = []; // Initialize the stockists array
     // The "Publish To web CSV link" from Google Sheets
-    var publicSpreadsheetUrl = "";
-    
+    var publicSpreadsheetUrl = "YOURURLHERE";
     function init() {
       Papa.parse(publicSpreadsheetUrl, {
         download: true,
