--- a/stockists.html
+++ b/stockists.html
@@ -237,8 +237,7 @@
     }
   
     var stockists = []; // Initialize the stockists array
-    var publicSpreadsheetUrl = "YOURURLHERE"
-    
+    var publicSpreadsheetUrl = "YOURURLHERE";
     function init() {
       Papa.parse(publicSpreadsheetUrl, {
         download: true,
